[gd_scene load_steps=3 format=3 uid="uid://bs523gvln5xgp"]

[ext_resource type="Script" path="res://ui/mainmenu/MainMenu.gd" id="1_f37a1"]

[sub_resource type="GDScript" id="GDScript_bbqii"]
script/source = "extends HBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_f37a1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
script = SubResource("GDScript_bbqii")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "Tower Defense Game"
fit_content = true

[node name="Continue" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Continue"

[node name="NewGame" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "New Game"

[node name="Tutorial" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Tutorial"

[node name="Stats" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Stats"

[node name="Settings" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="ExitGame" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Exit Game"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Continue" to="." method="_on_Button_pressed" binds= ["Continue"]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/NewGame" to="." method="_on_Button_pressed" binds= ["NewGame"]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ExitGame" to="." method="_on_Button_pressed" binds= ["ExitGame"]]
